objects/Auction__c.object
<CustomObject>
    <fields>
        <fullName>ACV_Condition_Report__c</fullName>
        <description>Links out to ACV Auction Manager.</description>
        <formula>HYPERLINK(&quot;https://app.acvauctions.com/auction/&quot; &amp; id__c,&quot;View VCR for Auction &quot; &amp; id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links out to ACV Auction Manager.</inlineHelpText>
        <label>ACV Condition Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Creator_VCI_id__c</fullName>
        <label>ACV Creator VCI id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Transportation_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACV Transportation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_VCI_id__c</fullName>
        <label>ACV VCI id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Vehicle_id__c</fullName>
        <label>ACV Vehicle id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_inop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated from Condition report answers when question #43 (Vehicle Inop - Does not move) is selected as TRUE</description>
        <label>ACV inop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arbitration_Plan__c</fullName>
        <description>Holds the number of days of the default or purchased arbitration plan for this auction.</description>
        <label>Arbitration Plan</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arbitration_Resolution_Amount__c</fullName>
        <label>Arbitration Resolution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_Lights_Concatenation__c</fullName>
        <description>Populated via a workflow rule that generates a string based upon the independent auction light checkboxes. This field is then evaluated in the Auction Lights formula to return a user-friendly image showing the Auction Lights for an Auction.</description>
        <label>Auction Lights Concatenation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Lights__c</fullName>
        <formula>CASE(Auction_Lights_Concatenation__c,
 &quot;b&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yN6&quot;, &quot;b&quot;,30,117),
 &quot;g&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yN7&quot;, &quot;g&quot;,30,117),
 &quot;gb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yN8&quot;, &quot;gb&quot;,30,117),
 &quot;gr&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yN9&quot;, &quot;gr&quot;,30,117),
 &quot;gy&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNA&quot;, &quot;gy&quot;,30,117),
 &quot;gyb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNB&quot;, &quot;gy&quot;,30,117),
 &quot;gyr&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNC&quot;, &quot;gyr&quot;,30,117),
 &quot;gyrb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yND&quot;, &quot;gyrb&quot;,30,117),
 &quot;r&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNE&quot;, &quot;r&quot;,30,117),
 &quot;rb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNF&quot;, &quot;rb&quot;,30,117),
 &quot;y&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNG&quot;, &quot;y&quot;,30,117),
 &quot;yb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNH&quot;, &quot;yb&quot;,30,117),
 &quot;yr&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNI&quot;, &quot;yr&quot;,30,117),
 &quot;yrb&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150a0000034yNJ&quot;, &quot;yrb&quot;,30,117),null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Lights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Notes__c</fullName>
        <description>A place for IST to track an issue with the auction process once marked as accepted, from payment to delivery.  This is a Covid field</description>
        <inlineHelpText>This is to be used to note issues in process after Auction is Ended Accepted</inlineHelpText>
        <label>Auction Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Bid__c</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days_Since_Ended__c</fullName>
        <formula>(Business_Hours_Since_Ended__c*60)/480</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Since Auction Ended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Since_Ended__c</fullName>
        <formula>(ROUND( 
8 * 
( 
( 5 * FLOOR( ( DATEVALUE(NOW()) - DATE( 2017,1,2) ) / 7) + 
MIN(5, 
MOD( DATEVALUE(NOW()) - DATE( 2017,1,2), 7) + 
MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE(end_time__c) - DATE( 2017,1,2) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( end_time__c) - DATE( 2017,1,2), 7 ) + 
MIN( 1, 24 / 8 * ( MOD( end_time__c- DATETIMEVALUE( &apos;2017-01-02 14:00:00&apos; ), 1) ) ) 
) 
) 
), 
MOD((NOW() - DATETIMEVALUE(&apos;2017-01-02 14:00:00&apos;))*1440,1440)/60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours Since Auction Ended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auctions as Buyer</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Dealer_ID__c</fullName>
        <description>Pulling Buyer ID form Account</description>
        <formula>buyer_dealership__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Doc_Compliance__c</fullName>
        <formula>TEXT(buyer_dealership__r.Dealer_Doc_Compliance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Doc Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Has_License__c</fullName>
        <formula>buyer_dealership__r.Compliant_Dealer_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Has License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Has_Resale__c</fullName>
        <formula>buyer_dealership__r.Compliant_Resale_Certificate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Has Resale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Account_Manager__c</fullName>
        <formula>buyer_dealership__r.IST_Account_Owner__r.FirstName + &quot; &quot; + buyer_dealership__r.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer IST Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Email__c</fullName>
        <description>This field auto populates to show the buying contact&apos;s IST Account Manager&apos;s email address.</description>
        <inlineHelpText>This field auto populates to show the buying contact&apos;s IST Account Manager&apos;s email address.</inlineHelpText>
        <label>Buyer IST Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Buyer_IST_Rep__c</fullName>
        <formula>buyer_dealership__r.IST_Account_Owner__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer IST Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_License_Number__c</fullName>
        <formula>buyer_dealership__r.License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Main_Phone__c</fullName>
        <formula>buyer_dealership__r.Dealer_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Main Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Region__c</fullName>
        <formula>buyer_dealership__r.Maps_Sales_Region_Name__c</formula>
        <label>Buyer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_State__c</fullName>
        <formula>buyer_dealership__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Territory__c</fullName>
        <formula>buyer_dealership__r.Maps_Sales_Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_s_Assurance_Upsell__c</fullName>
        <formula>text(buyer_dealership__r.Buyer_s_Assurance_Exceptions__c)</formula>
        <inlineHelpText>First time offense = &quot;Goodwill&quot; 
Second time offense = &quot;Retro Charge&quot; 
Third time offense = &quot;Deny&quot;</inlineHelpText>
        <label>Buyer&apos;s Assurance Upsell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_Since_Auction_End__c</fullName>
        <formula>now()-end_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Days Since Auction End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Celigo_Payment_Status__c</fullName>
        <label>Celigo_Payment_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Off</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>No Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Arbitration_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Arbitration Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Report_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Condition Report ID
This field is populated through the integration. It looks up to the condition report using the unique external Saved Auction Id</description>
        <inlineHelpText>Lookup Field to Condition Report object.</inlineHelpText>
        <label>Condition Report ID</label>
        <referenceTo>Condition_Report__c</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Active_Pricing_Recommendations__c</fullName>
        <description>Pulls down the count of active pricing recommendations from the Vehicle Object.</description>
        <formula>vehicle_id__r.Count_of_Active_Pricing_Recommendations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Active Pricing Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Pricing_Recommendations__c</fullName>
        <description>Pulls down the count of total pricing recommendations associated with this vehicle from the vehicle object.</description>
        <formula>vehicle_id__r.Count_of_Pricing_Recommendations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Pricing Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counted_for_Account_Logistics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counted for Account Logistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Transportation_Request_Status__c</fullName>
        <description>Set by the integration to indicate current Transportation Request status.</description>
        <label>Current Transportation Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>in_transit</fullName>
                    <label>In-Transit</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <description>Duplicate of &quot;Transportation Date Delivered&quot;</description>
        <inlineHelpText>Date vehicle delivered when transported by ACV</inlineHelpText>
        <label>XDate Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Picked_Up__c</fullName>
        <description>Date picked up when transported by ACV - Covid Field - Associated with process builder</description>
        <inlineHelpText>This is the date the vehicle was picked up by transporter if ACV transport was used</inlineHelpText>
        <label>Date Picked Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>Pulls down the Dealer ID from Accounts for List view criteria on Auction Obj</description>
        <formula>Seller_Dealership__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <formula>IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;1&apos; ,&apos;Franchise&apos;,
IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;2&apos; ,&apos;Independent&apos;,
IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;4&apos; ,&apos;Independent - ACV Certified&apos;,
IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;3&apos; ,&apos;Wholesaler&apos;,
IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;Dealer Group (Parent Account)&apos;,&apos;Dealer Group (Parent Account)&apos;,
IF(TEXT( Seller_Dealership__r.Dealer_Type__c )==&apos;5&apos; ,&apos;Commercial&apos;,
 &apos;&apos;) 

)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difference_Between_Recommended_and_Floor__c</fullName>
        <description>Difference between Recommended Ceiling Price and Seller&apos;s Floor price</description>
        <formula>IF(AND(ISBLANK(vehicle_id__r.Recommended_Price_Ceiling__c), 
ISBLANK(floor_price__c)),
NULL, 
vehicle_id__r.Recommended_Price_Ceiling__c - floor_price__c)</formula>
        <label>Difference Between Recommended and Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Price_and_Highest_Bid_Gap__c</fullName>
        <description>Difference between winning Floor Price and Winning Bid Price</description>
        <formula>IF(AND(ISBLANK(Winning_Bid_Price__c), 
ISBLANK(floor_price__c)), 
NULL, 
floor_price__c - Winning_Bid_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Price and Highest Bid Gap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Image_Stop_Light__c</fullName>
        <formula>IF(  green_light__c =true, 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Green Light</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Life_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated with the Inventory Life Cycle the Auction is related to</description>
        <label>Inventory Life Cycle</label>
        <referenceTo>Inventory_Life_Cycle__c</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Gross_Sold__c</fullName>
        <formula>IF(OR(CONTAINS(TEXT(status__c), &apos;accepted&apos;), CONTAINS(TEXT(status__c), &apos;unwound&apos;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Gross Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Net_Sold__c</fullName>
        <formula>IF(CONTAINS(TEXT(status__c), &apos;accepted&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Net Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unwound__c</fullName>
        <formula>IF(CONTAINS(TEXT(status__c), &apos;unwound&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Unwound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMR_AutoCheck_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://m.manheim.com/mobile/vin/summary?vin=&quot; &amp; vehicle_id__r.vin__c &amp; &quot;&amp;mileage=&quot; &amp; TEXT(vehicle_id__r.odometer__c) , &quot;AutoCheck URL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR AutoCheck URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMR_Link__c</fullName>
        <description>Populates field with the MMR link associated with the vehicle.</description>
        <formula>vehicle_id__r.MMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Set by Process Builder automation.</description>
        <label>Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vehicle_Make</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Auction__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to mark the auction as being the most recent auction for a specific VIN.</description>
        <label>Most Recent Auction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Arbitrations__c</fullName>
        <label>Number of Arbitrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Arbitration_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Arbitration Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Timestamp__c</fullName>
        <label>Buyer Payment Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prior_payment_Method__c</fullName>
        <description>used to show the original payment method selected at auction- pushed to case for the arbitration team to see if this was ever edited</description>
        <label>Prior Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Lane_Id__c</fullName>
        <description>This field holds the Private Lane uuid that is populated via the data dump. It will be deprecated once we have all Private Lane&apos;s in Salesforce via producer/consumer.</description>
        <externalId>true</externalId>
        <label>Private Lane Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Lane__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Private Lane this Auction ran under</description>
        <label>Private Lane</label>
        <referenceTo>Private_Lane__c</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecPrice_Avail_to_Accept__c</fullName>
        <formula>IF((auto_sell__c = TRUE) &amp;&amp; (Relevant_Recommended_Floor_Price__c &lt;&gt; 0) &amp;&amp; (Relevant_Recommended_Ceiling_Price__c &lt;&gt; 0) &amp;&amp; (Relevant_Recommended_Price_Date__c &lt; start_time__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecPrice Avail to Accept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Seller_s_Failed_Runs__c</fullName>
        <description>Pulls down the count of the recent sellers failed runs from the Vehicle Obj.</description>
        <formula>vehicle_id__r.Recent_Seller_s_Failed_Runs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Seller&apos;s Failed Runs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox indicating whether release slip is available. Used in setting status of Cases to &quot;Ready-to-Post&quot;</description>
        <label>Release Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_DateTime__c</fullName>
        <description>The datetime stamp from acv_prod.auction_files for the release file.</description>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Pickup_Phrase__c</fullName>
        <description>Pickup_Phrase from auctions_attribute table</description>
        <label>Release Pickup Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Recommended_Ceiling_Price__c</fullName>
        <description>Stamps the relevant recommended ceiling price for this auction</description>
        <inlineHelpText>A ceiling price recommendation is not always given.</inlineHelpText>
        <label>Relevant Recommended Ceiling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relevant_Recommended_Floor_Price__c</fullName>
        <description>Stamps the Relevant Recommended Floor Price for this auction</description>
        <label>Relevant Recommended Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relevant_Recommended_Price_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the user that created the relevant RP</description>
        <label>Relevant Recommended Price Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevant_Recommended_Price_Date__c</fullName>
        <description>Populated via workflow to stamp the Auction record with the date where the relevant pricing record was created by the pricing manager.</description>
        <label>Relevant Recommended Price Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saved_Auction_ID__c</fullName>
        <description>Field used to bring in the saved auction ID through integration</description>
        <label>Saved Auction ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_fee_item_pack_fee__c</fullName>
        <label>Sell Fee Item Pack Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_90_Day_Sell_Thru_Rate__c</fullName>
        <formula>Seller_Dealership__r.X90_Day_Sell_Thru_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller 90 Day Sell-Thru Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller_Accepted_RecPrice_1or0__c</fullName>
        <description>Seller Accepted Recommended Price 1 or 0 (Numeric representation of the Seller_Accepted_Recommended_Price__c checkbox)</description>
        <formula>IF((auto_sell__c = TRUE &amp;&amp; Relevant_Recommended_Floor_Price__c &lt;&gt; 0 &amp;&amp; Relevant_Recommended_Ceiling_Price__c &lt;&gt; 0) 
   &amp;&amp; (
         ((floor_price__c &gt;= Relevant_Recommended_Floor_Price__c) &amp;&amp; (floor_price__c &lt;= Relevant_Recommended_Ceiling_Price__c) &amp;&amp; (Relevant_Recommended_Price_Date__c &lt; start_time__c ))
         ||  
         (floor_price__c &lt;= Relevant_Recommended_Floor_Price__c)
       )
, 
1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Accepted RecPrice 1or0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller_Accepted_Recommended_Price__c</fullName>
        <description>Checkbox that is marked as True if the Seller listed the vehicle up for Auction using the price recommended to them by the Pricing Manager, 
Added auto_sell__c = TRUE , which will ignore auctions that are Live Appraisals</description>
        <formula>AND((auto_sell__c = TRUE), 
OR( 
AND( 
floor_price__c &gt;= Relevant_Recommended_Floor_Price__c , floor_price__c &lt;= Relevant_Recommended_Ceiling_Price__c , Relevant_Recommended_Price_Date__c &lt; start_time__c 
),(floor_price__c &lt;= Relevant_Recommended_Floor_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Accepted Recommended Price?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Dealer_ID__c</fullName>
        <formula>Seller_Dealership__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Dealership_SFDC_Id__c</fullName>
        <formula>CASESAFEID(Seller_Dealership__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Dealership SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by Integration to indicate who provided the vehicle for the auction</description>
        <label>Seller Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Launched at Auction</relationshipLabel>
        <relationshipName>Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Inventory_Id__c</fullName>
        <description>Field populated through Inbound integration from the seller_inventory_id field found on the saved_auctions table in acv_prod</description>
        <label>Seller Inventory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_License_Number__c</fullName>
        <formula>Seller_Dealership__r.License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Date__c</fullName>
        <label>Seller Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Method__c</fullName>
        <label>Seller Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ach</fullName>
                </value>
                <value>
                    <fullName>check</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_Payment_Tracking_Number__c</fullName>
        <label>Seller Payment Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_State__c</fullName>
        <formula>Seller_Dealership__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Tracking_Number_For_Titles__c</fullName>
        <label>Seller Tracking Number For Titles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Tracking_URL_for_Titles__c</fullName>
        <description>stores the tracking number for title shipments from seller to acv</description>
        <label>Seller Tracking URL for Titles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Buyer__c</fullName>
        <formula>buyer_dealership__r.Owner.FirstName &amp; &quot; &quot; &amp;  buyer_dealership__r.Owner.LastName</formula>
        <label>Territory Manager - Buyer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Seller__c</fullName>
        <formula>Seller_Dealership__r.Owner.FirstName &amp; &quot; &quot; &amp; Seller_Dealership__r.Owner.LastName</formula>
        <label>Territory Manager - Seller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Since_Auction_End__c</fullName>
        <formula>IF ( (NOW()-end_time__c) &gt; 0,
TEXT(FLOOR( (NOW()-end_time__c))) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * ( (NOW()-end_time__c) - FLOOR((NOW()-end_time__c)) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( (NOW()-end_time__c) - FLOOR((NOW()-end_time__c)) ),8) - FLOOR(
ROUND( 24 * ( (NOW()-end_time__c) - FLOOR((NOW()-end_time__c)) ),8)) ),0)) &amp; &quot; mins &quot;
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Auction Ended</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Cases__c</fullName>
        <description>Populated by DLRS</description>
        <label>Title Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Shipping_Status_Seller_To_ACV__c</fullName>
        <description>Shipping status updated from easypost and pulled down into title case</description>
        <label>Title Shipping Status Seller To ACV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Status_1__c</fullName>
        <description>Stores the title status information. this is being pushed up from the titles case and pulled down into unwind cases</description>
        <label>Title Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>